--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,281 @@
-.App {
-  text-align: center;
+p {
+  text-align: left;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h3 {
+  text-align: left;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.search-minimal {
+  background-color: #ffffff;
+  padding: 7px;
+  border-top:0;
+  border-left:0;
+  border-right:0;
+  border-radius: 0px;
+  border-width: 2px;
+  border-color: #0e1f3c;
+  color: #0e1f3c;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.button-minimal {
+  background-color: #ffffff;
+  border-top:0;
+  border-left:0;
+  border-right:0;
+  border-radius: 0px;
+  border-width: 2px;
+  border-color: #e8b870;
+  color: #e8b870;
 }
 
-.App-link {
-  color: #61dafb;
+.dropdown-minimal {
+  background-color: #ffffff;
+  border-radius: 0px;
+  border-width:2px;
+  color: #0e1f3c;
+  border-color: #0e1f3c;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.circle-button-bg {
+  margin: 6px;
+  padding: 0px;
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  border-width: 2px;
+  border-color: #d0a76c;
+}
+
+.circle-button-bg:hover {
+  background-color: #04734b;
+  color: #ffffff;
+}
+
+.square-150 {
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
+  height: 150px;
+}
+
+.signup-input {
+  height: 40px;
+  position: relative;
+  top: 2px;
+}
+
+.branding {
+  /*TODO: Find a branding FONT*/
+  color: #ffffff;
+}
+
+.branding-dark {
+  color: #0c0c0c;
+}
+
+.header-main {
+  text-align: left;
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+.subheader {
+  text-align: left;
+}
+
+.emphasis {
+  color: #5bbf98;
+}
+
+.text-lightish {
+  color: #cdcdcd;
+}
+
+.background {
+  background-color: #ffffff;
+}
+
+.alt-background {
+  background-color: #ebfbee;
+}
+
+.tan-background {
+  background-color: #fff9ea;
+}
+
+.standard-link {
+  color: #049b65;
+  font-weight: bold;
+}
+
+.standard-link:hover {
+  color: #04734b;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.circle-button {
+  margin: 6px;
+  padding: 0px;
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  border-color: #0c0c0c;
+  background-color: #ffffff;
+  color: #0c0c0c;
+}
+
+.circle-button:hover {
+  background-color: #04734b;
+  color: #ffffff;
+}
+
+.standard-button {
+  background-color: #049b65;
+  border-color: #049b65;
+  color: #ffffff;
+  border-radius: 3px;
+}
+
+.standard-button:hover {
+  background-color: #04734b;
+  border-color: #049b65;
+}
+
+.standard-button:disabled {
+  background-color: #acacac;
+  border-color: #acacac;
+}
+
+.input-button {
+  height: 40px;
+}
+
+.current-step {
+  background-color: #22aa33;
+}
+
+.complete-step {
+  background-color: #2233aa;
+}
+
+.incomplete-step {
+  background-color: #887777;
+}
+
+.scrollable {
+  overflow-y:scroll;
+  height: 600px;
+}
+
+.side-by-side {
+  padding: 16px;
+  width:100%;
+  height:700px;
+}
+
+.diagram-background {
+  height:700px;
+}
+
+.case-diagram {
+  position:relative;
+  top:40%;
+}
+
+.case-background {
+  position: relative;
+  top: 0;
+  left: 0;
+  width:100%;
+}
+
+.case-foreground {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width:100% !important;
+}
+
+.bottle-six-back {
+  position:absolute;
+  top:-20%;
+  left:40%;
+  width:28% !important;
+  height: 78% !important;
+}
+
+.bottle-six-midbackleft {
+  position: absolute;
+  top:-10%;
+  left:25%;
+  width:28% !important;
+  height: 78% !important;
+}
+
+.bottle-six-midbackright {
+  position: absolute;
+  top:-10%;
+  left:60%;
+  width:28% !important;
+  height: 78% !important;
+}
+
+.bottle-six-midleft {
+  position: absolute;
+  top:0%;
+  left:10%;
+  width:28% !important;
+  height: 78% !important;
+}
+
+.bottle-six-midright {
+  position: absolute;
+  top:0%;
+  left:42%;
+  width:28% !important;
+  height: 78% !important;
+}
+
+.bottle-six-front {
+  position: absolute;
+  top:12%;
+  left:25%;
+  width:28% !important;
+  height: 78% !important;
+}
+
+.case-item-dark {
+  background-color: #142748;
+  padding: 16px;
+  color: #ffffff;
+}
+
+.case-item-light {
+  background-color: #f8fbff;
+  padding: 16px;
+  color: #000000;
+}
+
+.square-150 {
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
+  height: 150px;
+}
+
+.circle-button-bg {
+  margin: 6px !important;
+  padding: 0px !important;
+  width: 40px !important;
+  height: 40px !important;
+  border-radius: 20px !important;
+  border-width: 2px !important;
+  border-color: #d0a76c;
+}
+
+.circle-button-bg:hover {
+  background-color: #04734b;
+  color: #ffffff;
 }
