--- a/src/App.css
+++ b/src/App.css
@@ -246,6 +246,96 @@ h3 {
   height: 78% !important;
 }
 
+.bottle-12-0 {
+  position: absolute;
+  top: -30%;
+  left: 43%;
+  width: 22% !important;
+  height: 78% !important;
+}
+.bottle-12-1 {
+  position: absolute;
+  top: -20%;
+  left: 58%;
+  width: 22% !important;
+  height: 78% !important;
+}
+.bottle-12-2 {
+  position: absolute;
+  top: -8%;
+  left: 72%;
+  width: 22% !important;
+  height: 78% !important;
+}
+.bottle-12-3 {
+  position: absolute;
+  top: -22%;
+  left: 30%;
+  width: 22% !important;
+  height: 78% !important;
+}
+.bottle-12-4 {
+  position: absolute;
+  top: -12%;
+  left: 45%;
+  width: 22% !important;
+  height: 78% !important;
+}
+.bottle-12-5 {
+  position: absolute;
+  top: 0%;
+  left: 60%;
+  width: 22% !important;
+  height: 78% !important;
+}
+
+.bottle-12-6 {
+  position: absolute;
+  top: -14%;
+  left: 18%;
+  width: 22% !important;
+  height: 78% !important;
+}
+.bottle-12-7 {
+  position: absolute;
+  top: -5%;
+  left: 32%;
+  width: 22% !important;
+  height: 78% !important;
+}
+.bottle-12-8 {
+  position: absolute;
+  top: 7%;
+  left: 47%;
+  width: 22% !important;
+  height: 78% !important;
+}
+.bottle-12-9 {
+  position: absolute;
+  top: -4%;
+  left: 6%;
+  width: 22% !important;
+  height: 78% !important;
+}
+.bottle-12-10 {
+  position: absolute;
+  top: 6%;
+  left: 20%;
+  width: 22% !important;
+  height: 78% !important;
+}
+.bottle-12-11 {
+  position: absolute;
+  top: 14%;
+  left: 34%;
+  width: 22% !important;
+  height: 78% !important;
+}
+
+.case-12 {
+  height: 321px;
+}
+
 .case-item-dark {
   background-color: #142748;
   padding: 16px;
