--- a/src/App.css
+++ b/src/App.css
@@ -372,3 +372,10 @@ h3 {
   background-color: #04734b;
   color: #ffffff;
 }
+
+.square {
+  width: 100%;
+  padding-bottom: 100%;
+  background-size: cover;
+  background-position: center;
+}
