--- a/src/App.css
+++ b/src/App.css
@@ -379,3 +379,73 @@ h3 {
   background-size: cover;
   background-position: center;
 }
+
+
+.loading-center {
+  text-align:center;
+}
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid #111;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #111 transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+#root .wine_list ul {
+  list-style-type: none;
+  padding: 0 0 20px 0;
+  margin: 0;
+}
+#root .wine_list li {
+  padding: 0;
+  margin: 0;
+}
+#root .wine_list p {
+  padding: 0;
+  margin: 0;
+}
+#root .product-button {
+  border: 1px solid #ccc !important;
+  padding: 0 !important;
+}
+#root .product-button .btn-primary {
+  background: #fff !important;
+  color: #000 !important;
+  border: none !important;
+}
+#root .product-button .btn-primary:hover {
+  background: #eee !important;
+}
+#root .product-button h4 {
+  text-align: center;
+  width: 100%;
+}
