--- a/src/custombootstrap.css
+++ b/src/custombootstrap.css
@@ -62,6 +62,7 @@
   }
 }
 #root {
+  /*
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
   background-color: #fff;
@@ -78,6 +79,7 @@
   line-height: var(--bs-body-line-height);
   margin: 0;
   text-align: var(--bs-body-text-align);
+  */
 }
 #root hr {
   background-color: currentColor;
