--- a/src/App.css
+++ b/src/App.css
@@ -168,8 +168,8 @@ h3 {
 }
 
 .scrollable {
-  overflow-y:scroll;
-  height: 600px;
+  overflow-y:auto;
+  height: 640px;
 }
 
 .side-by-side {
@@ -340,9 +340,9 @@ h3 {
 }
 
 .case-item-dark {
-  background-color: #142748;
+  background-color: #f5f5f5;
   padding: 16px;
-  color: #ffffff;
+  color: #000000;
 }
 
 .case-item-light {
