--- a/src/index.css
+++ b/src/index.css
@@ -228,7 +228,7 @@ h3 {
   width:100% !important;
 }
 
-.bottle-six-back {
+.bottle-6-0 {
   position:absolute;
   top:-20%;
   left:40%;
@@ -236,7 +236,7 @@ h3 {
   height: 78% !important;
 }
 
-.bottle-six-midbackleft {
+.bottle-6-1 {
   position: absolute;
   top:-10%;
   left:25%;
@@ -244,7 +244,7 @@ h3 {
   height: 78% !important;
 }
 
-.bottle-six-midbackright {
+.bottle-6-2 {
   position: absolute;
   top:-10%;
   left:60%;
@@ -252,7 +252,7 @@ h3 {
   height: 78% !important;
 }
 
-.bottle-six-midleft {
+.bottle-6-3 {
   position: absolute;
   top:0%;
   left:10%;
@@ -260,7 +260,7 @@ h3 {
   height: 78% !important;
 }
 
-.bottle-six-midright {
+.bottle-6-4 {
   position: absolute;
   top:0%;
   left:42%;
@@ -268,7 +268,7 @@ h3 {
   height: 78% !important;
 }
 
-.bottle-six-front {
+.bottle-6-5 {
   position: absolute;
   top:12%;
   left:25%;
